@@ -1,3 +1,4 @@
+* Deactivate variants when product is deactivated
 * Allow multiple templates to be added/removed on a category
 
 Version 5.8.0 - 2020-11-02
